// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orders Styles should render the main container with full container mixin applied 1`] = `
<div
  className="indexstyles__Main-lhfXmf eJRibE"
/>
`;

exports[`Orders Styles should render the main container with full container mixin applied 2`] = `
<div
  className="indexstyles__Main-lhfXmf eJRibE"
/>
`;

exports[`Orders Styles should render the main container with full container mixin applied 3`] = `
<div
  className="indexstyles__Main-lhfXmf eJRibE"
/>
`;

exports[`Orders Styles should render the main container without full container mixin applied 1`] = `
<div
  className="indexstyles__Main-lhfXmf gPbytn"
/>
`;

exports[`Orders Styles should render the order add button container with 10% from bottom 1`] = `
<div
  className="indexstyles__OrderAddButtonContainer-jYjuXD fOwvrw"
/>
`;

exports[`Orders Styles should render the order add button container with 20% from bottom 1`] = `
<div
  className="indexstyles__OrderAddButtonContainer-jYjuXD hVNumR"
/>
`;
